[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://timeline_view.gd" type="Script" id=2]
[ext_resource path="res://lane_gradient.tres" type="Gradient" id=3]

[node name="Main" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="VBoxContainer" type="HBoxContainer" parent="Toolbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Button" type="Button" parent="Toolbar/VBoxContainer"]
margin_right = 59.0
margin_bottom = 24.0
text = "Open..."

[node name="PreciseCheckBox" type="CheckBox" parent="Toolbar/VBoxContainer"]
margin_left = 63.0
margin_right = 138.0
margin_bottom = 24.0
text = "Precise"

[node name="Main" type="ColorRect" parent="."]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 568.0
size_flags_vertical = 3
color = Color( 0.054902, 0.054902, 0.054902, 1 )
script = ExtResource( 2 )
lane_gradient = ExtResource( 3 )

[node name="StatusBar" type="Panel" parent="."]
margin_top = 568.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="StatusBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="StatusLabel" type="Label" parent="StatusBar/HBoxContainer"]
margin_top = 5.0
margin_right = 1016.0
margin_bottom = 19.0
size_flags_horizontal = 3
[connection signal="toggled" from="Toolbar/VBoxContainer/PreciseCheckBox" to="." method="_on_PreciseCheckBox_toggled"]
[connection signal="hovered_time" from="Main" to="." method="_on_Main_hovered_time"]
